fix(vercel): correct /admin rewrites using :path*

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     { "source": "/admin", "destination": "https://badm-admin.vercel.app" },
-    { "source": "/admin/(.*)", "destination": "https://badm-admin.vercel.app/$1" }
+    { "source": "/admin/:path*", "destination": "https://badm-admin.vercel.app/:path*" }
   ]
 }
