--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
-    { "source": "/admin", "destination": "https://badm-admin.vercel.app" },
-    { "source": "/admin/:path*", "destination": "https://badm-admin.vercel.app/:path*" }
-  ]
+    { "source": "/admin", "destination": "/admin/index.html" },
+    { "source": "/admin/:path*", "destination": "/admin/index.html" }
+  ],
+  "cleanUrls": true
 }
