--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     { "source": "/admin", "destination": "/admin/index.html" },
-    { "source": "/admin/:path*", "destination": "/admin/index.html" },
     { "source": "/static/:path*", "destination": "/admin/static/:path*" },
+    { "source": "/vendor/:path*", "destination": "/admin/vendor/:path*" },
     { "source": "/manifest.webmanifest", "destination": "/admin/manifest.webmanifest" },
     { "source": "/favicon.ico", "destination": "/admin/favicon.ico" },
     { "source": "/favicon.svg", "destination": "/admin/favicon.svg" }
