--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
     { "source": "/vendor/:path*", "destination": "/admin/vendor/:path*" },
     { "source": "/manifest.webmanifest", "destination": "/admin/manifest.webmanifest" },
     { "source": "/favicon.ico", "destination": "/admin/favicon.ico" },
-    { "source": "/favicon.svg", "destination": "/admin/favicon.svg" }
+    { "source": "/favicon.svg", "destination": "/admin/favicon.svg" },
+    { "source": "/admin/:path*", "destination": "/admin/index.html" }
   ],
   "cleanUrls": true
 }
