--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "routes": [
     { "handle": "filesystem" },
-    { "src": "^/admin(?:/.*)?$", "dest": "/admin/index.html" },
-    { "src": "^(?!/admin/).*$", "dest": "/index.html" }
-  ],
-  "cleanUrls": true
+    { "src": "/admin(?:/.*)?", "dest": "/admin/index.html" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 }
