--- a/altius/package.json
+++ b/altius/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1",
     "react-dom": "^19.1",
     "sanity": "^4.6.1",
+    "sanity-plugin-media": "^2.2.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
