--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "cheerio": "^1.0.0",
     "framer-motion": "^10.16.0",
     "groq": "^3.99.0",
     "lucide-react": "^0.292.0",
