feat(scrape): enable JS-render proxies; Blog static JSON fallback; GHA secrets env+permissions

--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,6 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run scraper
+        env:
+          SCRAPERAPI_KEY: ${{ secrets.SCRAPERAPI_KEY }}
+          SCRAPINGBEE_KEY: ${{ secrets.SCRAPINGBEE_KEY }}
         run: |
           python scripts/bwf_scrape.py
       - name: Commit and push
