--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.0.0"
   },
   "devDependencies": {
+    "@vercel/node": "^5.3.21",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
