--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -32,5 +32,9 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add public/data/bwf_news.json
-          git commit -m "chore(scrape): update BWF news JSON [skip ci]" || echo "No changes"
+          git commit -m "chore(scrape): update BWF news JSON" || echo "No changes"
           git push
+      - name: Trigger Vercel deploy (optional)
+        if: ${{ secrets.VERCEL_DEPLOY_HOOK_URL != '' }}
+        run: |
+          curl -X POST -sS "${{ secrets.VERCEL_DEPLOY_HOOK_URL }}" || true
