--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -35,6 +35,11 @@ jobs:
           git commit -m "chore(scrape): update BWF news JSON" || echo "No changes"
           git push
       - name: Trigger Vercel deploy (optional)
-        if: ${{ secrets.VERCEL_DEPLOY_HOOK_URL != '' }}
+        env:
+          VERCEL_DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
         run: |
-          curl -X POST -sS "${{ secrets.VERCEL_DEPLOY_HOOK_URL }}" || true
+          if [ -n "$VERCEL_DEPLOY_HOOK_URL" ]; then
+            curl -X POST -sS "$VERCEL_DEPLOY_HOOK_URL" || true
+          else
+            echo "No VERCEL_DEPLOY_HOOK_URL secret set, skipping deploy hook"
+          fi
