ci: replace heredoc with python -c; fix YAML parsing errors

--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -29,13 +29,7 @@ jobs:
           python scripts/bwf_scrape.py
       - name: Show scraped items count
         run: |
-          python - << 'PY'
-            import json
-            with open('public/data/bwf_news.json','r',encoding='utf-8') as f:
-              j=json.load(f)
-            print('items:', len(j.get('items') or []))
-            print('first_titles:', [it.get('title') for it in (j.get('items') or [])][:3])
-PY
+          python -c "import json; j=json.load(open('public/data/bwf_news.json','r',encoding='utf-8')); print('items:', len(j.get('items') or [])); print('first_titles:', [it.get('title') for it in (j.get('items') or [])][:3])"
       - name: Upload scraped JSON artifact
         uses: actions/upload-artifact@v4
         with:
