--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -40,14 +40,15 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add public/data/bwf_news.json
-          git commit -m "chore(scrape): update BWF news JSON" || echo "No changes"
+          git commit -m "chore(scrape): update BWF news JSON - $(date '+%Y-%m-%d %H:%M')" || echo "No changes"
           git push
-      - name: Trigger Vercel deploy (optional)
+      - name: Trigger Vercel deploy
         env:
           VERCEL_DEPLOY_HOOK_URL: ${{ secrets.VERCEL_DEPLOY_HOOK_URL }}
         run: |
           if [ -n "$VERCEL_DEPLOY_HOOK_URL" ]; then
-            curl -X POST -sS "$VERCEL_DEPLOY_HOOK_URL" || true
+            echo "Triggering Vercel deploy..."
+            curl -X POST -sS "$VERCEL_DEPLOY_HOOK_URL" && echo "Deploy triggered successfully" || echo "Deploy trigger failed"
           else
             echo "No VERCEL_DEPLOY_HOOK_URL secret set, skipping deploy hook"
           fi
