Fix Facebook date display and permalink routing
- Replace hardcoded September 8th dates with proper publishedAt field handling
- Show 'Дата не указана' when publishedAt is missing instead of current date
- Update Vercel routing to properly handle SPA routes for /blog and other pages
- Add explicit routes for /api, /data, and /assets to prevent conflicts

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "routes": [
     { "handle": "filesystem" },
+    { "src": "^/api/(.*)$", "dest": "/api/$1" },
+    { "src": "^/data/(.*)$", "dest": "/data/$1" },
+    { "src": "^/assets/(.*)$", "dest": "/assets/$1" },
     { "src": "^/static/(.*)$", "dest": "/admin/static/$1" },
     { "src": "^/vendor/(.*)$", "dest": "/admin/vendor/$1" },
     { "src": "^/manifest\\.webmanifest$", "dest": "/admin/manifest.webmanifest" },
