--- a/.github/workflows/bwf_scrape.yml
+++ b/.github/workflows/bwf_scrape.yml
@@ -25,6 +25,9 @@ jobs:
         env:
           SCRAPERAPI_KEY: ${{ secrets.SCRAPERAPI_KEY }}
           SCRAPINGBEE_KEY: ${{ secrets.SCRAPINGBEE_KEY }}
+          # Default: parse ONLY from the specified championships page (news-single) overview block
+          BWF_CHAMP_ONLY: '1'
+          BWF_CHAMP_URLS: 'https://bwfworldchampionships.bwfbadminton.com/news-single/2025/09/06/why-not-keep-going/'
         run: |
           python scripts/bwf_scrape.py
       - name: Show scraped items count
