--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "git": {
     "deploymentEnabled": {
-      "preview": false,
-      "production": false
+      "preview": true,
+      "production": true
     }
   },
-  "ignoreCommand": "exit 0",
   "routes": [
     { "handle": "filesystem" },
     { "src": "^/api/(.*)$", "dest": "/api/$1" },
