--- a/altius/package.json
+++ b/altius/package.json
@@ -15,6 +15,8 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/icons": "^3.7.4",
+    "@sanity/ui": "^3.1.0",
     "@sanity/vision": "^4.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
