--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "groq": "^3.99.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "typescript": "^5.0.0"
