--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "20"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@sanity/client": "^6.29.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
@@ -14,11 +15,15 @@
     "cheerio": "^1.0.0",
     "framer-motion": "^10.16.0",
     "groq": "^3.99.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^6.8.0",
     "typescript": "^5.0.0"
   },
