--- a/altius/package.json
+++ b/altius/package.json
@@ -15,17 +15,19 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/client": "^7.11.2",
     "@sanity/icons": "^3.7.4",
     "@sanity/ui": "^3.1.0",
-    "@sanity/vision": "^4.9.0",
+    "@sanity/vision": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^4.9.0",
+    "sanity": "^4.10.1",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.2",
     "@types/react": "^19.1",
+    "esbuild": "^0.25.10",
     "eslint": "^9.28",
     "prettier": "^3.5",
     "typescript": "^5.8"
