--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,4 @@
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob: https:; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://*.sanity.io; media-src 'self' https: blob:; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
