--- a/altius/package.json
+++ b/altius/package.json
@@ -9,7 +9,8 @@
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "import:about": "node scripts/import-about-data.js"
   },
   "keywords": [
     "sanity"
@@ -19,6 +20,7 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/ui": "^3.1.0",
     "@sanity/vision": "^4.10.3",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^4.10.3",
